made the use of UTF8 encoding consistent throughout